Remove chain id from transaction statuses
