# module/swagger/mhub2/v1/query.swagger.json
@@ -1044,7 +1044,7 @@
         ]
       }
     },
-    "/mhub2/v1/transaction_status/{chain_id}/{tx_hash}": {
+    "/mhub2/v1/transaction_status/{tx_hash}": {
       "get": {
         "operationId": "Query_TransactionStatus",
         "responses": {
@@ -1062,12 +1062,6 @@
           }
         },
         "parameters": [
-          {
-            "name": "chain_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
           {
             "name": "tx_hash",
             "in": "path",
